# meval-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
examples/: eval.rs  plot.rs
src/: de.rs  expr.rs  extra_math.rs  lib.rs  shunting_yard.rs  tokenizer.rs
