[package]
edition = "2024"
rust-version = "1.86.0"
authors = ["Norbert Pozar <bertapozar@gmail.com>"]
description = "A simple math expression parser and evaluator."
documentation = "https://docs.rs/meval"
homepage = "https://github.com/rekka/meval-rs"
keywords = ["math", "parser", "expression", "formula", "evaluator"]
license = "Unlicense/MIT"
name = "meval"
readme = "README.md"
repository = "https://github.com/rekka/meval-rs"
version = "0.2.0"
exclude = ["README.tpl", ".travis.yml"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
fnv = "1.0.7"
nom = "8.0.0"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
gnuplot = "0.0.23"
serde_test = "1"
serde_json = "1"
toml = "0.4.5"
criterion = "0.6.0"


[[bench]]
name = "bench"
harness = false
